tests/resource/valid/collection/set_union.mamba
def b := { 10, "string", True }
