tests/resource/invalid/type/operation/in_dict_wrong_ty.mamba
def x := { True => "T", False => "F" }

2 in x
